Archive2/a7/c4e404e781b7fb/output
main.cpp:62:1: error: expected unqualified-id before numeric constant
 100100
 ^
